chore: add db connection configs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=proposal-app
+spring.datasource.url=jdbc:postgresql://localhost:5433/proposaldb
+spring.datasource.password=123
+spring.datasource.username=postgres
