--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=proposal-app
 spring.datasource.url=jdbc:postgresql://localhost:5433/proposaldb
 spring.datasource.password=123
 spring.datasource.username=postgres
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
