--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 rabbitmq.pendingproposal.exchange=pending-proposal.ex
+rabbitmq.finishedproposal.exchange=finished-proposal.ex
