feat: create FinishedProposalListener

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.rabbitmq.password=guest
 
 rabbitmq.pendingproposal.exchange=pending-proposal.ex
 rabbitmq.finishedproposal.exchange=finished-proposal.ex
+
+rabbitmq.queue.finished.proposal=finished-proposal.proposal-service
