--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,6 @@ spring.rabbitmq.password=guest
 
 rabbitmq.pendingproposal.exchange=pending-proposal.ex
 rabbitmq.finishedproposal.exchange=finished-proposal.ex
+rabbitmq.pendingproposal.dlexchange=pending-proposal.dlx
 
 rabbitmq.queue.finished.proposal=finished-proposal.proposal-service
